# speleodb_compass_sidecar

./: .env.dist  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  DEV.md  LICENSE  LOGGING.md  Makefile  TESTING.md  styles.css
.cargo/: config.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
api/: Cargo.toml
api/src/: api_info.rs  auth.rs  error.rs  http.rs  lib.rs  project.rs  test_support.rs
app/: .taurignore  Cargo.toml  Trunk.toml  about.html  index.html  package-lock.json  package.json  styles.css  tailwind.config.js
app/src/: app.rs  error.rs  main.rs  speleo_db_controller.rs  ui_constants.rs
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.rc
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns  icon.psd
app/src-tauri/src/: api.rs  commands.rs  lib.rs  main.rs  paths.rs  self_update.rs  state.rs  user_prefs.rs  zip_management.rs
app/src-tauri/src/project/: map.rs  mod.rs  revision.rs
app/src-tauri/src/project_management/: local_project.rs  mod.rs  revision.rs
app/src/components/: auth_screen.rs  create_project_modal.rs  loading_screen.rs  main_layout.rs  mod.rs  modal.rs  project_details.rs  project_listing.rs  project_listing_item.rs  update_notification.rs
app/src/components/assets/: countries.json
common/: Cargo.toml
common/src/: api_info.rs  api_types.rs  compass_project.rs  error.rs  lib.rs  ui_state.rs  user_prefs.rs
common/src/project/: map.rs  mod.rs  revision.rs
docs/: api-v2.md  desktop-menu.md  project-listing.md  self-update-notification.md  tauri-dev.md  versioning.md  windows-test-manifest.md
errors/: Cargo.toml
errors/src/: lib.rs
src/: app.rs  error.rs  main.rs  speleo_db_controller.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  commands.rs  lib.rs  state.rs  zip_management.rs
src/components/: create_project_modal.rs  mod.rs  modal.rs  project_details.rs  project_listing.rs
tasks/lessons/: 2026-02-26-always-verify-all-crates.md  desktop-menu-platform-roles.md  integration-test-preflight.md  self-update-notification.md
tasks/todos/: 2026-06-09-cmd-q-quit.md  2026-06-09-compass-only-project-type.md  2026-06-09-paste-shortcuts.md  2026-06-09-tauri-dev-port-collision.md
xtask/: Cargo.toml
xtask/src/: main.rs
