[workspace]
resolver = "3"
members = ["api","app","app/src-tauri", "common"]
default_members = ["api","app/src-tauri", "common"]

[workspace.dependencies]
bytes = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.9.8"
url = "2.5.7"
uuid = { version = "1", features = ["serde", "v4", "rng-rand" ] }
