[workspace]
resolver = "3"
members = ["api","app","app/src-tauri", "common", "errors"]
default-members = ["api","app/src-tauri", "common","errors"]

[workspace.dependencies]
bytes = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "time"] }
toml = "0.9.8"
url = "2.5.7"
uuid = { version = "1", features = ["serde", "v4", "rng-rand" ] }
