[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# local dependencies
common = { path = "../common" }

# workspace dependencies
bytes.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

#Cargo dependencies
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "multipart"] }

[dev-dependencies]
serial_test = "3"
dotenvy = "0.15"
ctor = "0.6"
