[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local dependencies
common = { path = "../common" }
# workspace dependencies
bytes.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

#Cargo dependencies
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "multipart"] }

[dev-dependencies]
# tokio is only used by tests (#[tokio::test], tokio::sync::OnceCell in
# test_support); the library itself does not depend on it.
tokio.workspace = true
serial_test = "3"
dotenvy = "0.15"
ctor = "0.10"
tempfile = "3"
zip = "8"
