[package]
name = "speleodb-compass-sidecar-ui"
version = "0.0.7"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Local dependencies
common = { path = "../common" }
yew_icons = {version = "0.9", features = ["font_awesome_regular", "font_awesome_solid"]}
# Workspace dependencies
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

console_error_panic_hook = "0.1.7"
getrandom = {version = "0.4.1", features = ["wasm_js"] }
futures = "0.3"
js-sys = "0.3"
once_cell = "1"
serde-wasm-bindgen = "0.6"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features = ["all"] }
wasm-bindgen = "=0.2.105"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["HtmlSelectElement"] }
yew = { version = "0.22", features = ["csr"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
