[package]
name = "speleodb_compass_common"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
flexi_logger = "0.31.7"
log = "0.4"
serde = {version = "1", features = ["derive"]}
thiserror = { version = "2"}
toml = {version = "0.9.8"}
uuid = {version = "1", features = ["serde","v4", "rng-rand" ]}
semver = { version = "1.0.27", features = ["serde"] }
