[package]
name = "common"
publish = false
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies
log.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

# Cargo dependencies
compass_data = "0.0.4"
dirs = "6.0.0"
flexi_logger = "0.31.7"
semver = { version = "1.0.27", features = ["serde"] }

[dev-dependencies]
serial_test = "3"
ctor = "0.6"
