[package]
name = "speleodb-compass-sidecar"
version = "0.0.3"
description = "A Tauri App"
authors = ["Jonathan Dekhtiar", "Zachary Heylmun"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "speleodb_compass_sidecar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Local dependencies
api = { path = "../../api" }
common = { path = "../../common" }

# Workspace dependencies
bytes.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

# Cargo dependencies
tauri = { version = "2", features = [] }
tauri-plugin-devtools = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml = { version = "0.9.8" }
zip = "6.0.0"
lazy_static = "1.4"
sentry = "0.46.0"

[dev-dependencies]
serial_test = "3"
dotenvy = "0.15"
ctor = "0.6"
