[package]
name = "speleodb-compass-sidecar"
version = "0.0.5"
description = "Companion app to use SpeleoDB with Compass"
authors = ["Jonathan Dekhtiar", "Zachary Heylmun"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "speleodb_compass_sidecar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Local dependencies
api = { path = "../../api" }
common = { path = "../../common" }

# Workspace dependencies
bytes.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
url.workspace = true
uuid.workspace = true

# Cargo dependencies
chrono = "0.4"
compass_data = "0.0.6"
pretty_env_logger = "0.5"
semver = { version = "1", features = ["serde"] }
sentry = "0.46"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
zip = "7"
dirs = "6"
flexi_logger = "0.31"

[dev-dependencies]
serial_test = "3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
